<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.abhisingh.womensafety.MainActivity"
    android:background="@drawable/bckgrnd">


    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"></include>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/siren"
        android:id="@+id/button"
        android:layout_marginTop="61dp"
        android:textSize="15dp"
        android:layout_below="@+id/toolBar"
        android:layout_centerHorizontal="true"
        android:onClick="playMusic" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:text="@string/hlp"
        android:id="@+id/button2"
        android:textSize="20dp"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:onClick="sendHelp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/safe"
        android:id="@+id/button3"
        android:textSize="15dp"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:onClick="safeClicked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cntcts"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:textColor="#000000"
        android:paddingRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/toolBar"
        android:layout_alignEnd="@+id/toolBar"
        android:onClick="nextActivity"
        android:clickable="true" />

</RelativeLayout>
