<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#3ed4e1">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbarlayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"></include>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/entr_c"
        android:id="@+id/textView2"
        android:layout_marginTop="71dp"
        android:textColor="#000000"
        android:layout_below="@+id/toolBar"
        android:layout_toLeftOf="@+id/editText1"
        android:layout_toStartOf="@+id/editText1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText1"
        android:textColor="#000000"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/button4"
        android:onClick="saveClicked"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView3"
        android:layout_marginTop="15dp"
        android:textColor="#000000"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/saved"
        android:id="@+id/textView4"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/button4"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:id="@+id/button5"
        android:layout_alignTop="@+id/button4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:nestedScrollingEnabled="false"
        android:onClick="deleteClicked" />

</RelativeLayout>